@@ -100,7 +100,6 @@ buildscript {
 }
 
 
-
 plugins {
     id 'java'
     id 'base'
@@ -127,10 +126,20 @@ plugins {
     id "org.asciidoctor.convert" version "2.3.0"
 }
 
-apply plugin: 'org.springframework.boot'
+apply plugin:'org.springframework.boot'
 //apply plugin: 'org.junit.platform.gradle.plugin'
 
 
+////////////////////////////// java 13 experimental preview feature //////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+compileJava {
+    options.compilerArgs += ["--enable-preview"]
+    }
+test {
+    jvmArgs '--enable-preview'
+    }
+bootRun {
+    jvmArgs(['--enable-preview'])
+}
 
 ////////////////////////////// for running app//////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
 wrapper {
@@ -369,7 +378,6 @@ dependencies {
     implementation "io.projectreactor:reactor-core"
     testImplementation "io.projectreactor:reactor-test"
     implementation "io.projectreactor.addons:reactor-extra"
-
 
 
     implementation 'com.oath.cyclops:cyclops:10.3.3'
